# aurelia-studio

./: .env.example  .gitignore  Aurelia_Etsy_Listing_Package.docx  Aurelia_Fase01_Planificacion_Estudio.docx  Aurelia_Guia_Produccion_Manual_Canva.docx  Aurelia_MVP_Notas_Cierre.docx  Aurelia_Studio_Briefing_Lanzamiento.docx  Aurelia_Studio_Briefing_Lanzamiento_v2.docx  LICENSE  Makefile  README.md  docker-compose.yml  gemini-code-1783879876965.sh  gemini-code-1783880385601.txt  gemini-code-1783880397683.py  gemini-code-1783880404192.sh  gemini-code-1783880406316.sh  gemini-code-1783880520359.sh  gemini-code-1783880537102.sh  gemini-code-1783880545999.json  gemini-code-1783880548936.txt  gemini-code-1783880702386.py  gemini-code-1783880708879.py  gemini-code-1783880711114.py  gemini-code-1783880814949.ts  gemini-code-1783880818026.ts  gemini-code-1783880822503.ts  gemini-code-1783880915230.txt  gemini-code-1783880921857.txt  gemini-code-1783882001052.py  gemini-code-1783882094597.py  gemini-code-1783882103089.sh  gemini-code-1783882135422.txt  gemini-code-1783882138694.py  gemini-code-1783882143415.py  pnpm-workspace.yaml
apps/api/: .gitignore  Dockerfile  main.py  main_update.txt  main_v0.3_update.txt  pyproject.toml  requirements.txt
apps/api/core/: config.py  database.py  logging.py  models.py  schemas.py
apps/api/routers/: health.py
apps/api/services/: __init__.py
apps/api/services/agents/: research_agent.py
apps/api/services/auth/: crud.py  router.py  (+1 more)
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_orchestrator.py  test_products.py
(+21 files in other folders)
